--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.1.0",
+    "mongoose": "^5.13.5",
     "morgan": "^1.9.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
     "nodemon": "^2.0.12"
   }
 }
