--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
