--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
         "react-dom": "^16.14.0",
         "react-helmet": "^6.1.0",
         "react-icons": "^4.3.1",
+        "react-is": "^17.0.2",
         "react-slick": "^0.28.1",
+        "sharp": "^0.30.3",
         "styled-components": "^5.3.3"
     },
     "devDependencies": {
